Fix bug where elements would not wrap

--- a/styles/general.sass
+++ b/styles/general.sass
@@ -37,7 +37,7 @@ header
         font-size: 16px
         box-sizing: border-box
         border: 2px solid #ccc
-        border-radius: 4px        
+        border-radius: 4px
     .login-button
         background-color: #01a4d9
         font-weight: bold
@@ -195,8 +195,8 @@ footer
     border: 0px
     border-radius: 20px
     color: white
-    font-size: 20px 
-    opacity: 0.0   
+    font-size: 20px
+    opacity: 0.0
 
 .delete-button-visible
     background-color: #E60023
@@ -224,7 +224,7 @@ footer
     border: 0px
     border-radius: 20px
     color: white
-    font-size: 20px    
+    font-size: 20px
 
 .reset-password-button-hidden
     background-color: #E60023
@@ -234,7 +234,7 @@ footer
     border: 0px
     border-radius: 20px
     color: white
-    font-size: 20px         
+    font-size: 20px
 
 .add-vocation-form-button
     background-color: #7868ff
@@ -483,9 +483,9 @@ footer
             background: #d1f3ff
             width: 230px
             >div
-                >ol    
-                    padding-left: 15px    
-                >ul           
+                >ol
+                    padding-left: 15px
+                >ul
                     list-style-type: none
                     padding-left: 0px
 
@@ -667,7 +667,8 @@ h1
 .user-form
     display: flex
     flex-direction: column
-    width: 800px
+    max-width: 800px
+    width: 100%
     margin-right: auto
     margin-left: auto
     gap: 15px
@@ -689,10 +690,11 @@ h1
             flex-direction: row
             flex-wrap: wrap
             justify-content: space-between
+            gap: 25px
             .radio-button-section
                 display: flex
                 flex-direction: column
-                max-width: 33%
+                width: fit-content
                 .form-section-sub-header
                     font-size: 25px
                 >div
